fix position of right arrow in notification box on mobile

--- a/src/app/notifications/notifications.component.css
+++ b/src/app/notifications/notifications.component.css
@@ -137,7 +137,7 @@
   display: block;
   position: absolute;
   top: 100px;
-  right: -311px;
+  right: -351px;
 }
 
 :host ::ng-deep .carousel-control-next-icon {
